update swagger token check
