# app.py
@@ -4,6 +4,13 @@ import jwt
 import datetime
 from functools import wraps
 from flask_swagger_ui import get_swaggerui_blueprint
+from mysql.connector import cursor
+
+from Hotels import locdata
+import mysql.connector
+
+import json
+
 # from routes import request_api
 app = Flask(__name__)
 
@@ -45,9 +52,56 @@ def index():
 
 # @app.route('/unprotected/<id>',methods=['GET'])
 # def unprotected(id):
-#     print(id)
-#     return jsonify(id)
+#     loc= locdata(id)
+#     return loc
 
+@app.route('/house/<title>', methods=['GET'])
+@app.route('/house/<title>/<bedroom>', methods=['GET'])
+@app.route('/house/<title>/<bedroom>/<sleeps>', methods=['GET'])
+@app.route('/house/<title>/<bedroom>/<sleeps>/<bathroom>', methods=['GET'])
+@app.route('/house/<title>/<bedroom>/<sleeps>/<bathroom>/<price>', methods=['GET'])
+@app.route('/house/<title>/<bedroom>/<sleeps>/<bathroom>/<price>/<location>', methods=['GET'])
+def house(title='any', bedroom='0', sleeps='0', location='any',bathroom='0',price='0'):
+
+    condo = []
+
+    db_connector = mysql.connector.connect(
+        host="localhost",
+        user="root",
+        password="",
+        database="Scrapping"
+    )
+
+    cursor = db_connector.cursor()
+# sleep  	bedroom  	bathroom  	price
+    query = ("SELECT * FROM datatable WHERE location ="+f"'{location}'  OR price=" + f"'{price}' OR bedroom=" + f"'{bedroom}'OR bathroom=" + f"'{bathroom}' OR sleep=" + f"'{sleeps}'")
+
+    print(query)
+    cursor.execute(query)
+
+    results = cursor.fetchall()
+
+    for x in results:
+        data = {
+            "Title": x[0],
+            "Location": x[1],
+            "Sleeps": x[2],
+            "Bedrooms": x[3],
+            "Bathrooms": x[4],
+            "Price": x[5],
+            "Picture": {
+                "Picture_1": x[6][1:-1],
+                "Picture_2": x[7][1:-1],
+                "Picture_3": x[8][1:-1],
+            }
+
+        }
+        condo.append(data)
+
+    houseJson = json.dumps(condo, indent=4)
+    print(houseJson)
+    # print(title, bedroom, sleeps, location)
+    return houseJson
 
 # Protected Route and function
 @app.route('/protected')
